inicializar variables en el application properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,6 @@ spring.jpa.properties.hibernate.format_sql=true
 # logging.level.org.hibernate.SQL=DEBUG
 # logging.level.org.hibernate.type.descriptor.sql=TRACE
 
+# Hacemos que la variable cadena tenga el siguiente valor
+cadena = Hola Juan
+
